@@ -1,3 +1,3 @@
-DIST jmtpsynchronizer-1.0-r58-beta3.tar.gz 1655573 RMD160 c6216344a07c6b90d8dca96959644f82ae87c5c7 SHA1 26779bffb86ea53ee7f8a2e3e36447b932a9560b SHA256 7b8e5988d6db1b602a6767da1f9b58880b0074f754c322108c60e66fa767d294
-EBUILD jmtpsynchronizer-1.0_beta3.ebuild 1612 RMD160 3f15e504413ba93464333d3e73afe04f742fecbd SHA1 92bf20e2c3e816ef81ec7356730b34a654462d3a SHA256 2685d80a71f8d7c6dea0f0cfdf86742942d06ec9c174ab141b6e72a2ca083e45
-MISC ChangeLog 232 RMD160 e86e0b28313c28b4455c0fef2a02ce670a95bb97 SHA1 b03bddaf5e0f2315487923f02fe3525762ba6b24 SHA256 579091ba67fe791ffc545b68c1be028a2c2f506709bbe57c8fc0ba8c3117dbdc
+DIST jmtpsynchronizer-1.0-r69-beta4.tar.gz 1740106 RMD160 a7654479c52a7def79c166145a7416cfdc673677 SHA1 abb7506fafbdb990597afa0d797373638ef16e8e SHA256 b14d8237d1c0a2cfd81d2a3965887d9bc99b0fba190ab1fcc14a94e1b87531a9
+EBUILD jmtpsynchronizer-1.0_beta4.ebuild 1354 RMD160 481472600a841e1b94d64ee5434f77482a4068cb SHA1 f4f27a26d4287dab2ec2fc99cdb29380cdd54e84 SHA256 e5bf2300dddeb97401a345e480a7f4e0eea936233f07599817752516598e59c7
+MISC ChangeLog 374 RMD160 d971cbf0eb04489fe17f7a2ab63f8bbb43c7fa31 SHA1 b0bd866d9c780df1763e902427790791ccaf51ac SHA256 3e59c29ac03175938463e78603303f47891aca6413bbcd72e5b02ec5102b772a
